# kani

.github/actions/setup/: action.yml
.github/workflows/: cbmc-latest.yml  kani.yml  release.yml  slow-tests.yml  verify-std-check.yml
crates/: .rustc_info.json  .rustdoc_fingerprint.json
crates/doc/: help.html  settings.html
crates/doc/kani/: all.html  attr.ensures.html  attr.loop_invariant.html  attr.modifies.html  attr.proof.html  attr.proof_for_contract.html  attr.recursion.html  attr.requires.html  attr.should_panic.html  attr.solver.html  attr.stub.html  attr.stub_verified.html  attr.unwind.html  derive.Arbitrary.html  derive.Invariant.html  enum.AllocationStatus.html  fn.any.html  fn.any_where.html  fn.assert.html  fn.assume.html  fn.concrete_playback_run.html  fn.cover.html  fn.pointer_generator.html  index.html  macro.arbitrary_tuple.html  macro.cover.html  macro.generate_arbitrary.html  macro.generate_float.html  macro.generate_models.html  macro.implies.html  macro.kani_intrinsics.html  macro.kani_lib.html  macro.kani_mem.html  macro.kani_mem_init.html  macro.ptr_generator.html  macro.ptr_generator_fn.html  (+4 more)
kani-driver/: Cargo.toml
kani-driver/src/: call_cbmc.rs  call_goto_cc.rs  call_goto_instrument.rs  cbmc_output_parser.rs  harness_runner.rs  main.rs  session.rs
scripts/: cargo-kani  cargo-kani.cmd  check-cbmc-version.py  kani  kani-fmt.sh  kani-regression.sh  kani.cmd
scripts/setup/: install_kissat.sh  windows-2022
src/: lib.rs  setup.rs
tools/compiletest/: Cargo.toml
tools/compiletest/src/: header.rs  main.rs  read2.rs  runtest.rs
(+329 files in other folders)
