# SPDX-License-Identifier: Apache-2.0 OR MIT
#
# Modifications Copyright Kani Contributors
# See GitHub history for details.

[package]
name = "compiletest"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
# From upstream compiletest:
# https://github.com/rust-lang/rust/tree/master/src/tools/compiletest
# Upstream crate does not list license but Rust statues:
#   Rust is primarily distributed under the terms of both the MIT
#   license and the Apache License (Version 2.0), with portions
#   covered by various BSD-like licenses.

[dependencies]
getopts = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", default-features = false, features = ["fmt", "env-filter", "smallvec", "parking_lot", "ansi"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2"
glob = "0.3"
wait-timeout = "0.2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
miow = "0.6"

[target.'cfg(windows)'.dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
]

[lints]
workspace = true
